@@ -1,3 +1,6 @@
+2004-05-09 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/whatsnew-list.rb: support absolute path of @conf.index.
+
 2004-05-06 TADA Tadashi <sho@spc.gr.jp>
 	* plugin/whatsnew-list.rb: output full text into description.
 
